// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Deploy Failure Scenarios constraint violation with transaction - automatic rollback: transaction-rollback-migration-state 1`] = `
{
  "changeCount": 0,
  "changes": [],
  "eventCount": 1,
  "events": [
    {
      "change_name": "violate_constraint",
      "error_code": "23505",
      "error_message": "duplicate key value violates unique constraint "test_users_email_key"",
      "event_type": "deploy",
      "project": "test-constraint-fail",
      "stack_trace": "error: duplicate key value violates unique constraint "test_users_email_key"
    at <project-root>/node_modules/pg/lib/client.js:LINE:COLUMN
    at processTicksAndRejections (NODE_INTERNAL)
    at executeQuery (<project-root>/packages/core/src/migrate/utils/transaction.ts:LINE:COLUMN)
    at <project-root>/packages/core/src/migrate/client.ts:LINE:COLUMN
    at withTransaction (<project-root>/packages/core/src/migrate/utils/transaction.ts:LINE:COLUMN)
    at LaunchQLMigrate.deploy (<project-root>/packages/core/src/migrate/client.ts:LINE:COLUMN)
    at Object.<anonymous> (<project-root>/packages/core/__tests__/projects/deploy-failure-scenarios.test.ts:LINE:COLUMN)",
    },
  ],
}
`;

exports[`Deploy Failure Scenarios constraint violation without transaction - partial deployment: partial-deployment-migration-state 1`] = `
{
  "changeCount": 2,
  "changes": [
    {
      "change_name": "create_table",
      "project": "test-constraint-partial",
      "script_hash": "0624b3e2276299c8c3b8bfa514fe0d128906193769b3aeaea6732e71c0e352e6",
    },
    {
      "change_name": "add_record",
      "project": "test-constraint-partial",
      "script_hash": "833d7d349e3c4f07e1a24ed40ac9814329efc87c180180342a09874f8124a037",
    },
  ],
  "eventCount": 3,
  "events": [
    {
      "change_name": "create_table",
      "error_code": null,
      "error_message": null,
      "event_type": "deploy",
      "project": "test-constraint-partial",
      "stack_trace": null,
    },
    {
      "change_name": "add_record",
      "error_code": null,
      "error_message": null,
      "event_type": "deploy",
      "project": "test-constraint-partial",
      "stack_trace": null,
    },
    {
      "change_name": "violate_constraint",
      "error_code": "23505",
      "error_message": "duplicate key value violates unique constraint "test_products_sku_key"",
      "event_type": "deploy",
      "project": "test-constraint-partial",
      "stack_trace": "error: duplicate key value violates unique constraint "test_products_sku_key"
    at <project-root>/node_modules/pg-pool/index.js:LINE:COLUMN
    at processTicksAndRejections (NODE_INTERNAL)
    at executeQuery (<project-root>/packages/core/src/migrate/utils/transaction.ts:LINE:COLUMN)
    at <project-root>/packages/core/src/migrate/client.ts:LINE:COLUMN
    at LaunchQLMigrate.deploy (<project-root>/packages/core/src/migrate/client.ts:LINE:COLUMN)
    at Object.<anonymous> (<project-root>/packages/core/__tests__/projects/deploy-failure-scenarios.test.ts:LINE:COLUMN)",
    },
  ],
}
`;

exports[`Deploy Failure Scenarios non-transaction mode - partial deployment on constraint failure: non-transaction-mode-constraint-failure 1`] = `
{
  "changeCount": 2,
  "changes": [
    {
      "change_name": "setup_schema",
      "project": "test-nontransaction-partial",
      "script_hash": "a3419a48994fd13a668befcaab23c4d0d7e9e08e6e6a9093effb3c85b7e953d9",
    },
    {
      "change_name": "create_constraint_table",
      "project": "test-nontransaction-partial",
      "script_hash": "ec5b17e155a2cd4e098716204192083d31d096a4cf163550d5ea176a4615a4d2",
    },
  ],
  "eventCount": 3,
  "events": [
    {
      "change_name": "setup_schema",
      "error_code": null,
      "error_message": null,
      "event_type": "deploy",
      "project": "test-nontransaction-partial",
      "stack_trace": null,
    },
    {
      "change_name": "create_constraint_table",
      "error_code": null,
      "error_message": null,
      "event_type": "deploy",
      "project": "test-nontransaction-partial",
      "stack_trace": null,
    },
    {
      "change_name": "fail_on_constraint",
      "error_code": "23514",
      "error_message": "new row for relation "orders" violates check constraint "orders_amount_check"",
      "event_type": "deploy",
      "project": "test-nontransaction-partial",
      "stack_trace": "error: new row for relation "orders" violates check constraint "orders_amount_check"
    at <project-root>/node_modules/pg-pool/index.js:LINE:COLUMN
    at processTicksAndRejections (NODE_INTERNAL)
    at executeQuery (<project-root>/packages/core/src/migrate/utils/transaction.ts:LINE:COLUMN)
    at <project-root>/packages/core/src/migrate/client.ts:LINE:COLUMN
    at LaunchQLMigrate.deploy (<project-root>/packages/core/src/migrate/client.ts:LINE:COLUMN)
    at Object.<anonymous> (<project-root>/packages/core/__tests__/projects/deploy-failure-scenarios.test.ts:LINE:COLUMN)",
    },
  ],
}
`;

exports[`Deploy Failure Scenarios transaction mode - complete rollback on constraint failure: transaction-mode-constraint-failure 1`] = `
{
  "changeCount": 0,
  "changes": [],
  "eventCount": 1,
  "events": [
    {
      "change_name": "fail_on_constraint",
      "error_code": "23514",
      "error_message": "new row for relation "orders" violates check constraint "orders_amount_check"",
      "event_type": "deploy",
      "project": "test-transaction-rollback",
      "stack_trace": "error: new row for relation "orders" violates check constraint "orders_amount_check"
    at <project-root>/node_modules/pg/lib/client.js:LINE:COLUMN
    at processTicksAndRejections (NODE_INTERNAL)
    at executeQuery (<project-root>/packages/core/src/migrate/utils/transaction.ts:LINE:COLUMN)
    at <project-root>/packages/core/src/migrate/client.ts:LINE:COLUMN
    at withTransaction (<project-root>/packages/core/src/migrate/utils/transaction.ts:LINE:COLUMN)
    at LaunchQLMigrate.deploy (<project-root>/packages/core/src/migrate/client.ts:LINE:COLUMN)
    at Object.<anonymous> (<project-root>/packages/core/__tests__/projects/deploy-failure-scenarios.test.ts:LINE:COLUMN)",
    },
  ],
}
`;

exports[`Deploy Failure Scenarios verify failure - non-existent table reference: verify-failure-non-existent-table 1`] = `
{
  "changeCount": 1,
  "changes": [
    {
      "change_name": "create_simple_table",
      "project": "test-verify-fail",
      "script_hash": "f5f0794a55d611246115a67e39747c887da6d6f83d79f63c3aa730fa97772942",
    },
  ],
  "eventCount": 2,
  "events": [
    {
      "change_name": "create_simple_table",
      "error_code": null,
      "error_message": null,
      "event_type": "deploy",
      "project": "test-verify-fail",
      "stack_trace": null,
    },
    {
      "change_name": "create_simple_table",
      "error_code": null,
      "error_message": "Verification failed",
      "event_type": "verify",
      "project": "test-verify-fail",
      "stack_trace": null,
    },
  ],
}
`;
